--- a/General-Assessment-Analyzer/General-Assessment-Analyzer/Properties/Resources.resx
+++ b/General-Assessment-Analyzer/General-Assessment-Analyzer/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="GAA" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\GAA.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="if_09_Examination_2064484" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_09_Examination_2064484.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="if_Draw_2290864" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\if_Draw_2290864.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
